# tech-digest

./: .gitignore  CLAUDE.md  bot.py  digest.py  enrich.py  pyproject.toml  run_digest.sh  sources.py
.beads/: issues.jsonl  sync_base.jsonl
prompts/: parse-release.md
telegram_toolkit/: __init__.py  cron.py  telegram.py
